# psp-data-build

./: .env.demo  .env.heroes  .env.template  .gitignore  CLAUDE.md  INDEXES.md  README.md  SUPERSET_METRICS.md  SUPERSET_METRICS_SURVEYS.md  data-architecture.md  performance_benchmark.ipynb  pyproject.toml  upload-secrets.sh
.claude/agents/: dbt-model-builder.md  poverty-stoplight-sql-analyst.md
.github/workflows/: dbt-build.yml
claude-skills/: README.md
data_model/: DATA_QUALITY.md  README.md  STAR_SCHEMA_DESIGN.md  STAR_SCHEMA_ERD.md
data_model/raw_data_collect_docs/: RAW_SCHEMA.md
data_model/schema_docs/: BUSINESS_QUESTIONS_DOCS.md  DATA_QUALITY_ISSUES.md  SCHEMA_REFERENCE.md  STAR_SCHEMA_DESIGN.md  STAR_SCHEMA_ERD.md
dbt/: .gitignore  .user.yml  DATA_QUALITY_ISSUES.md  DATA_QUALITY_NOTES.md  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: generate_alias_name.sql  generate_schema_name.sql  indicator_score.sql
dbt/models/: _sources.yml  schema.yml  test_simple_indicator_catalog.sql
dbt/models/marts/: .gitkeep  (+15 more)
dbt/tests/: assert_dimension_name_valid_when_dimension_id_exists.sql  assert_dimension_percentages_valid.sql  assert_dimension_score_range.sql  assert_income_and_currency_paired.sql  assert_percentages_sum_to_100.sql  assert_plausible_snapshot_dates.sql  assert_progress_mart_families_have_multiple_surveys.sql  (+2 more)
dbt_old/: .user.yml  dbt_project.yml  profiles.yml
docs/: RAW_SCHEMA-DOCS.md
heroes-demo/: mart-reporting-toolkit.md
plans/: HEAD_OF_DATA_PLAN.md
scripts/: deploy-to-lightdash.sh
superset/: metadata.yaml
(+115 files in other folders)
