[project]
name = "psp-data-build"
version = "0.1.0"
description = "dbt semantic layer for Poverty Stoplight database"
authors = [
    {name = "Poverty Stoplight", email = "data@povertystoplight.org"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dbt-core>=1.7.0,<2.0.0",
    "dbt-postgres>=1.7.0,<2.0.0",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
